tests/snapshots/construction_parse__construction_parse_invalid_fee.snap
---
source: tests/construction_parse.rs
expression: response
---
Err(
    TransactionSubmitFeeSmall(
        "Fee must be at least 0.001",
    ),
)
