tests/snapshots/construction_parse__construction_parse_invalid_format_signed.snap
---
source: tests/construction_parse.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Signed transaction must have one of: payment, stake_delegation",
        ),
    ),
)
