tests/snapshots/construction_parse__construction_parse_invalid_operations_signed.snap
---
source: tests/construction_parse.rs
expression: response
---
Err(
    MalformedPublicKey(
        "receiver",
    ),
)
