tests/snapshots/construction_parse__construction_parse_invalid_operations_unsigned.snap
---
source: tests/construction_parse.rs
expression: response
---
Err(
    JsonParse(
        Some(
            "Unsigned transaction does not match operations, randomOracleInput or signerInput",
        ),
    ),
)
